[WFCORE-7552] GC_LOG broken for Semeru JDK on Windows with space in path